--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,14 @@ dependencies:
   file_picker: ^6.1.1
   flutter:
     sdk: flutter
+  flutter_widget_from_html: ^0.14.10+1
   html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  path: ^1.8.3
 
 flutter:
   uses-material-design: true
