--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_widget_from_html: ^0.14.10+1
   html: ^0.15.4
+  window_manager: ^0.3.7
 
 dev_dependencies:
   flutter_test:
